fix light/dark mode issue on ios

--- a/src/index.css
+++ b/src/index.css
@@ -17,6 +17,9 @@ body,
   width: 100%;
   overscroll-behavior: none;
   -webkit-overflow-scrolling: touch;
+  margin: 0;
+  padding: 0;
+  background-color: white;
 }
 
 html,
@@ -30,8 +33,15 @@ body::-webkit-scrollbar {
   display: none;
 }
 
+@media (prefers-color-scheme: dark) {
+  html,
+  body,
+  #root {
+    background-color: black;
+  }
+}
+
 * {
-  /* font-family: "IBM Plex Mono", monospace; */
   font-family: "Bricolage Grotesque", sans-serif;
   font-optical-sizing: auto;
   font-style: normal;
